log
Thu 21 Mar 2024 12:12:54 AM UTC: 
 tests:  0|5
total_score: 0/70
690cdd0
Thu 21 Mar 2024 02:10:47 AM UTC: 
 exercises.c | 24 ++++++++++++++++++------
 1 file changed, 18 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:11: error: ‘suma’ undeclared (first use in this function)
   64 |    return suma;
      |           ^~~~
exercises.c:64:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
825bb5a
Thu 21 Mar 2024 02:11:01 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2dbe656
Thu 21 Mar 2024 02:17:16 AM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:16: error: expected expression before ‘List’
   69 |       popFront(List *L);
      |                ^~~~
Compilation failed
afea444
Thu 21 Mar 2024 02:17:23 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
13fcf28
Thu 21 Mar 2024 02:18:19 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |       suma += elemento;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
0600661
Thu 21 Mar 2024 02:18:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
a98621f
Thu 21 Mar 2024 02:19:03 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
2c001e0
Thu 21 Mar 2024 02:19:33 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
647f06c
Thu 21 Mar 2024 02:20:49 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
fa52774
Thu 21 Mar 2024 02:27:02 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:105:10: error: unused variable ‘Paux’ [-Werror=unused-variable]
  105 |   Stack* Paux = create_stack();
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
9546ea2
Thu 21 Mar 2024 03:06:07 AM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  3|2
total_score: 40/70
769525a
Thu 21 Mar 2024 03:07:19 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
d51a327
